--- a/helloworld.wicket/src/main/scala/ch/codecraft/hellowicket/HomePage.html
+++ b/helloworld.wicket/src/main/scala/ch/codecraft/hellowicket/HomePage.html
@@ -13,7 +13,7 @@
 	<div id="hd">
 		<div id="logo">
 			<img src="logo.png" width="50px" height="50px" alt="Wicket Logo" />
-			<h1>Apache Wicket</h1>
+			<h1 wicket:id="hwtitle">Apache Wicket</h1>
 		</div>
 	</div>
 	<div id="bd">
