OPEN - task 2: add a link and a second page https://github.com/codecraft21/ch.codecraft.helloworld.wicket/issues/issue/2

--- a/helloworld.wicket/src/main/scala/ch/codecraft/hellowicket/HomePage.html
+++ b/helloworld.wicket/src/main/scala/ch/codecraft/hellowicket/HomePage.html
@@ -54,6 +54,7 @@
 			<wicket:container wicket:id="version">1.5-SNAPSHOT</wicket:container>
 			.
 		</p>
+		<a href="" wicket:id="secondPage">Go to the 2nd page</a>
 	</div>
 	<div id="ft"></div>
 </body>
