--- a/helloworld.wicket/src/main/scala/ch/codecraft/hellowicket/SecondPage.html
+++ b/helloworld.wicket/src/main/scala/ch/codecraft/hellowicket/SecondPage.html
@@ -8,7 +8,10 @@
 <body>
   <h2 wicket:id="title">[title]</h2>
   <div id="pilot">
-    <p wicket:id="pilot.name">[pilot name]</p>
+    <ul>
+        <li wicket:id="pilot.name">[pilot name]</li>
+        <li wicket:id="pilot.nick">[pilot nick]</li>
+    </ul>
   </div>
 </body>
 </html>
