--- a/helloworld.wicket/src/main/scala/ch/codecraft/hellowicket/SecondPage.html
+++ b/helloworld.wicket/src/main/scala/ch/codecraft/hellowicket/SecondPage.html
@@ -9,8 +9,8 @@
   <h2 wicket:id="title">[title]</h2>
   <div id="pilot">
     <ul>
-        <li wicket:id="pilot.name">[pilot name]</li>
-        <li wicket:id="pilot.nick">[pilot nick]</li>
+        <li wicket:id="name">[pilot name]</li>
+        <li wicket:id="nick">[pilot nick]</li>
     </ul>
   </div>
 </body>
